--- a/about.html
+++ b/about.html
@@ -8,14 +8,12 @@
 
   <h1>Kenneth R. Higgins III</h1>  
 
-    <h3>My subheading</h3>
+    <h3><strong>A little about me...</strong></h3>
    
-Hello world!  My name is Ken, and I am excited about developing web design skills!  I have zero experience in web development and design.  I look forward to having a new understanding.  Likewise, I have one main expectation from this course.  I want to have experiences that I can apply to my profession as an educator and principal.  I look forward to applying my web development skills in two ways.  Two ways includes constructing my own sites and sharing this with my peers. My favorite hobby is to be active outside.  I do not currently have free time, and I am very happy with that!  I have a wife, two young children, work, and I am in graduate school! Furthermore, I spend every minute I can with my family. When I graduate in August, I look forward to getting back some free time to work on new projects around the house.
+Hello world!  My name is Ken, and I am excited about developing web design skills!  I have zero experience in web development and design.  I look forward to having a new understanding.  
+Likewise, I have one main expectation from this course.  I want to have experiences that I can apply to my profession as an educator and principal.  I look forward to applying my web development skills in two ways.  Two ways includes <strong>constructing my own sites</strong> and <strong>sharing</strong> this with my <em>peers</em>. My favorite hobby is to be active outside.  I do not currently have free time, and I am very happy with that!  I have a wife, two young children, work, and I am in graduate school! Furthermore, I spend every minute I can with my family. When I graduate in August, I look forward to getting back some free time to work on new projects around the house.
     
-<p>A description of me... I am 6'2", 265lbs, I am athletic, I love being active and spending time with my family.  I like food, picking up things and putting them down. (In an Arnold voice)</p>
-    
-   <h4>my paragrapg one</h4>
- <p>I am a little fried from doing negotiations all week.  I apologize about my randomness. I am enjoying learning this coding portion.  I wish I would have learned about this a long time ago!</p>
+<blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
 
  <p>Better <strong>late</strong> than <strong>never</strong></p>
 
