--- a/about.html
+++ b/about.html
@@ -6,12 +6,14 @@
 </head>
 <body>
 
-  <h1>Kenneth R. Higgins III</h1>  
+<h1>Kenneth R. Higgins III</h1>  
 
-    <h3><strong>A little about me...</strong></h3>
+<h3><strong>A little about me...</strong></h3>
    
+<!-- I would appreciate any insight on issues that you can see; did I bold/italicise correctly? -->
+    
 Hello world!  My name is Ken, and I am excited about developing web design skills!  I have zero experience in web development and design.  I look forward to having a new understanding.  
-Likewise, I have one main expectation from this course.  I want to have experiences that I can apply to my profession as an educator and principal.  I look forward to applying my web development skills in two ways.  Two ways includes <strong>constructing my own sites</strong> and <strong>sharing</strong> this with my <em>peers</em>. My favorite hobby is to be active outside.  I do not currently have free time, and I am very happy with that!  I have a wife, two young children, work, and I am in graduate school! Furthermore, I spend every minute I can with my family. When I graduate in August, I look forward to getting back some free time to work on new projects around the house.
+Likewise, I have one main expectation from this course.  I want to have experiences that I can apply to my profession as an educator and principal.  <br>I look forward to applying my web development skills in two ways.  Two ways includes <strong>constructing my own sites</strong> and <strong>sharing</strong> this with my <em>peers</em>. My favorite hobby is to be active outside.  I do not currently have free time, and I am very happy with that!  I have a wife, two young children, work, and I am in graduate school! Furthermore, I spend every minute I can with my family. When I graduate in August, I look forward to getting back some free time to work on new projects around the house.
     
 <blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
 
