--- a/about.html
+++ b/about.html
@@ -2,22 +2,19 @@
 <html lang="en-US">
 <head>
                <meta charset="utf-8">
-               <title>Welcome to Ken Higgins Website</title>
+               <title>Educator Credentials or About Me</title>
 </head>
 <body>
+<article>
+  <header>
+    <h1>About me</h1>
+    <p>Hello everyone!  My name is Mr. Higgins, and I’m a science teacher at West Middle. I am a husband and a father. I have two amazing children; Leonardo and Josephine.  Leo is going to be three years old and Josie turned one last month. My wife’s name is Maria, and we have been together for ten amazing years!  As a family, we enjoy being active. Our favorite outdoor activities include going to the park and playing games. When I am not spending time with my family or working, I am investing in my education. I wish to continue building my skills and understanding of technology.  In addition, I wish to learn how to appropriately implement and manage technology in the classroom. By focusing on all of this, I wish to maximize student engagement, resources and skills throughout the learning process. As you can tell, I have a passion for education and making efforts to enhance this process.</p>
 
-<h1>Kenneth R. Higgins III</h1>  
+<blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
 
-<h3><strong>A little about me...</strong></h3>
-   
-<!-- I would appreciate any insight on issues that you can see; did I bold/italicise correctly? -->
-    
-Hello world!  My name is Ken, and I am excited about developing web design skills!  I have zero experience in web development and design.  I look forward to having a new understanding.  
-Likewise, I have one main expectation from this course.  I want to have experiences that I can apply to my profession as an educator and principal.  <br>I look forward to applying my web development skills in two ways.  Two ways includes <strong>constructing my own sites</strong> and <strong>sharing</strong> this with my <em>peers</em>. My favorite hobby is to be active outside.  I do not currently have free time, and I am very happy with that!  I have a wife, two young children, work, and I am in graduate school! Furthermore, I spend every minute I can with my family. When I graduate in August, I look forward to getting back some free time to work on new projects around the house.
-    
-<blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
-
- <p>Better <strong>late</strong> than <strong>never</strong></p>
-
+<footer>
+    <p>Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></p>
+</footer>    
+</article>
 </body>
 </html>
