--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
                <meta charset="utf-8">
                <title>index page</title>
+<style>
+aside {
+  width: 30%;
+  padding-left: 15px;
+  margin-left: 15px;
+  float: right;
+  font-style: italic;
+  background-color: lightgray;
+}
+</style>
 </head>
-<body>
-<h1><bold>Welcome</bold> to <bold>Mr. Higgins</bold> <em>7th Grade Life Science</em> Class!</h1>
 
-<p>This website is an extension to our class and is a resource to help support your learning by:
+<body>
+
+
+<main>
+<article><h1><bold>Welcome</bold> to <bold>Mr. Higgins</bold> <em>7th Grade Life Science</em> Class!</h1></article>
 <ul style="list-style-type:disc">
+<p>This website is an extension to our class and is a resource to help support your learning by:
+<aside>
+<p>These elements will all be covered in a step-by-step process. 
+</aside>
 <li>Using objective-specific information</li>
 <li>Applying concepts to real- life situations</li>
 <li>Reflecting on our experiences</li>
@@ -16,12 +32,19 @@
     
 
 <h5>My journey started back in high school.  I hated science until I had an incredible experience my freshman year.  My teacher was Dr. Pinkham.  He taught through experiences and reflection.  At the end of the class, the teacher asked “How can you apply this to your life?”.  I had a new passion, science.  In college, I continued to foster this passion.  I studied Biology, Biochemistry, and education as an undergrad.  I went on to work in a lab only to feel unfulfilled.  I changed careers and began working as a science teacher.  In addition, I was a head coach of three sports.  Eventually, I earned my master’s in education leadership and moved into administration.  I continued my education studying educational technologies and informational systems.  I love all the nuances in education.  I am passionate about education and I want to enhance it.  I want to leave a positive mark on education as Dr. Pinkham did for me.</h5>
+</main>
     
 <blockquote>“<bold>Character</bold>, in the long run, is the <bold>decisive factor</bold> in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
 
 <footer>
     <p>Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></p>
 </footer>
-
+               <nav>
+  <a href="/Home/">Home</a> |
+  <a href="/About Me/">About Me</a> |
+  <a href="/Let's Lern/">Lets Learn!</a> |
+  <a href="/Resources/">Resources</a> |
+  <a href="/Contact Me/">Contact Me
+</nav>
 </body>
 </html>
