--- a/about.html
+++ b/about.html
@@ -14,7 +14,14 @@
 
 <footer>
     <p>Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></p>
-</footer>    
+</footer>  
+<nav>
+  <a href="/Home/">Home</a> |
+  <a href="/About Me/">About Me</a> |
+  <a href="/Let's Lern/">Lets Learn!</a> |
+  <a href="/Resources/">Resources</a> |
+  <a href="/Contact Me/">Contact Me
+</nav>
 </article>
 </body>
 </html>
