--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 </footer>  
 <nav>
   <a href="/Home/">Home</a> |
-  <a href="/About Me/">About Me</a> |
+  <a href="/https://krh7c5.github.io/about.html/">About Me</a> |
   <a href="/Let's Lern/">Lets Learn!</a> |
   <a href="/Resources/">Resources</a> |
   <a href="/Contact Me/">Contact Me
