--- a/about2.html
+++ b/about2.html
@@ -12,7 +12,7 @@
 
 <blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
 
-    <p> Here is my resume <a href="/Higgins Resume.pdf"> click here </a></p>
+    <p> Here is my resume: <a href="/Higgins Resume.pdf"> click here </a></p>
     
 <footer>
     <p>Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></p>
