--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
  <nav>
       <center>
       <ul>
-     <a href="index.html">Home</a>
-    <a href="about2.html">About</a> 
-     <a href="#learn">Learn</a>
+     <li><a href="index.html">Home</a></li>
+        <li><a href="about2.html">About</a></li>
+        <li><a href="#learn">Learn</a></li>
      </ul>
      </cnter>
     
