--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
  <nav>
      <li><a href="index.html">Home</a></li>
-    <a href="about2.html">About</a> 
-     <a href="#learn">Learn</a>
+   <li><a href="about2.html">About</a></li>
+   <li><a href="#learn">Learn</a></li>
      
     </nav>
     
