--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1 class="heading">Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</h1>
 
 <p>This website is an extension to our class and is a resource to help support your learning by:
-<ul style="list-style-type:disc">
+<ol style="list-style-type:disc">
 <li>Using objective-specific information</li>
 <li>Applying concepts to real- life situations</li>
 <li>Reflecting on our experiences</li>
