--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      <li><a href="index.html">Home</a></li>
      <li><a href="about2.html">About</a></li> 
      <li><a href="#learn">Learn</a></li>
-   <li><a href="#">dROPDOWN<A/>
+   <li><a href="#">Dropdown<a/></li>
      <ul>
        <li><a href="#">Menu 1<a/></li>
        <li><a href="#">Menu 2<a/></li>
