--- a/learn.html
+++ b/learn.html
@@ -16,7 +16,7 @@
             </ul>
     </li>
         <li><a>Contact</a></li>
-        <li><a>Credit & Resources</a></li>
+        <li><a>Credit &amp; Resources</a></li>
      </ul>  
                                           
 </head>
