--- a/learn.html
+++ b/learn.html
@@ -8,7 +8,7 @@
     <ul> 
          <li><a>Home</a></li>
          <li><a>About</a></li>                               
-         <li><a>Learn</a></li>
+         <li><a>Learn</a>
             <ul>
                 <li><a>Link 1</a></lin></li>
                 <li><a>Link 2</a></lin></li>
