--- a/learn.html
+++ b/learn.html
@@ -10,8 +10,8 @@
          <li><a>About</a></li>                               
          <li><a>Learn</a>
             <ul>
-                <li><a>Link 1</a></lin></li>
-                <li><a>Link 2</a></lin></li>
+                <li><a>Link 1</a></li>
+                <li><a>Link 2</a></li>
                 <li><a>Link 2</a></li>
             </ul>
     </li>
