--- a/learn.html
+++ b/learn.html
@@ -1,5 +1,5 @@
 <html>
-    <link href='style.css rel='stylesheet' >
+    <link href='style.css' rel='stylesheet' >
                                           
     <ul> 
          <li><a>Home</a></li>
