--- a/learn.html
+++ b/learn.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
                <meta charset="utf-8">
-               <title>Welcome page</title>
+               <title>Learn page</title>
     <link href="style.css" rel="stylesheet" >
                                           
     <ul> 
