--- a/learn.html
+++ b/learn.html
@@ -6,8 +6,8 @@
     <link href="style.css" rel="stylesheet" >
                                           
     <ul> 
-         <li><a href="index2.html">Home</a></li>
-         <li><a href="about2.html">About</a></li>                               
+         <li><a href="index.html">Home</a></li>
+         <li><a href="about.html">About</a></li>                               
          <li><a href="learn.html">Learn</a>
             <ul>
                 <li><a href="#link1">Link 1</a></li>
