--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <ul class="nav">
      <li><a href="index.html">Home</a></li>
      <li><a href="about2.html">About</a></li> 
-     <li><a href="#learn">Learn</a></li>
+     <li><a href="learn.html">Learn</a></li>
    
  </ul>
     
