--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                <title>Welcome page</title>
   
   <link href="style.css" rel="stylesheet" >
-                                          
+  <div class="nav">                                        
     <ul> 
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>                               
