--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   
 </head>
     
-<nav>     
+<header> 
+    <div class="nav"></div>
       <ul> 
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>                               
@@ -21,7 +22,8 @@
         <li><a href="#contact">Contact</a></li>
         <li><a href="resources.html">Credit & Resources</a></li>
      </ul> 
-</nav>
+    </div>
+</header>
     
 <body>   
 <h1 class="heading">Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</h1>
