--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
                <meta charset="utf-8">
                <title>Welcome page</title>
-    <link rel="stylesheet" href=style.css>
+    <link rel="stylesheet" href=nav.css>
   
 </head>
     
