--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="link3">Link 2</a></li>
             </ul>
         </li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact">Contact</a></li>
         <li><a href="resources.html">Credit & Resources</a></li>
      </ul> 
     </div>
