--- a/learn.html
+++ b/learn.html
@@ -2,12 +2,12 @@
 <html lang="en-US">
 <head>
                <meta charset="utf-8">
-               <title>Learn page</title>
+               <title>Welcome page</title>
     <link href="style.css" rel="stylesheet" >
                                           
     <ul> 
-         <li><a href="index.html">Home</a></li>
-         <li><a href="about.html">About</a></li>                               
+         <li><a href="index2.html">Home</a></li>
+         <li><a href="about2.html">About</a></li>                               
          <li><a href="learn.html">Learn</a>
             <ul>
                 <li><a href="#link1">Link 1</a></li>
@@ -15,8 +15,8 @@
                 <li><a href="link3">Link 2</a></li>
             </ul>
         </li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#credit">Credit & Resources</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="resources.html">Credit & Resources</a></li>
      </ul>  
                                           
 </head>
