--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a href="link3">Link 2</a></li>
             </ul>
         </li>
-        <li><a href="contact">Contact</a></li>
-        <li><a href="resources.html">Credit & Resources</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="reflection.html">Reference Page</a></li>
      </ul> 
     </div>
 </header>
