--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
     
 <header> 
-    <div class="nav"></div>
+    <div class="nav">
       <ul> 
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>                               
@@ -20,7 +20,7 @@
             </ul>
         </li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="resources.html">Credit & Resources</a></li>
+        <li><a href="reflection.html">Reference Page</a></li>
      </ul> 
     </div>
 </header>
