--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     
 <header> 
-    <div class="nav"></div>
+    <div class="nav">
       <ul> 
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>                               
