--- a/learn.html
+++ b/learn.html
@@ -13,7 +13,7 @@
       <ul> 
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>                               
-         <li><a href="learn.html">Learn</a>
+         <li><a href="learn.html">Learn</a></li>
             <ul>
                 <li><a href="#link1">Link 1</a></li>
                 <li><a href="#link2">Link 2</a></li>
