--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
     
 <body>   
-<h1 class="heading">Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</h1>
+<h1><center>Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</center></h1>
 
 <p>This website is an extension to our class and is a resource to help support your learning by:
 <ul style="list-style-type:disc">
