--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
                <meta charset="utf-8">
                <title>Welcome page</title>
+   <style>
+    h1{ text-align: left;}
+  </style>
     <link rel="stylesheet" href=nav.css>
   
 </head>
@@ -25,8 +28,9 @@
     </div>
 </header>
     
-<body>   
-<h1><center>Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</center></h1>
+<body>
+  <br/>
+<br/><h1><center>Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</center></h1>
 
 <p>This website is an extension to our class and is a resource to help support your learning by:
 <ul style="list-style-type:disc">
