--- a/reflection.html
+++ b/reflection.html
@@ -37,7 +37,7 @@
 <br/>
 <br/><h1><strong>Resources</strong></h1>
     
-    <p1>For his website, I used a variety of resources.<p1/>
+    <p1>For this website, I used a variety of resources.<p1/>
     
     <h2><strong>Videos</strong></h2>
     <p2>For the videos that will be used in the <strong>learn page</strong>I have/will use videos that I personal have created.</p2>
