--- a/reflection.html
+++ b/reflection.html
@@ -11,7 +11,7 @@
 </head>
     
 <nav> 
-    <div class="nav">
+    <div class="nav.css">
       <ul> 
          <li><a href="index.html">Home</a></li>
          <li><a href="about.html">About</a></li>                               
