--- a/reflection.html
+++ b/reflection.html
@@ -4,7 +4,11 @@
 <head>
                <meta charset="utf-8">
                <title>Resources</title>
-    
+    <style>
+      h1 {text-align: left;}
+      h2 {text-align: left;}
+      p1::first-letter {color: deeppink}
+  </style>
     <link rel="stylesheet" href=nav.css>
     <link rel="stylesheet" href="style.css">
   
