--- a/reflection.html
+++ b/reflection.html
@@ -7,7 +7,8 @@
     <style>
       h1 {text-align: left;}
       h2 {text-align: left;}
-      p1::first-letter {color: deeppink}
+      p1::first-letter {color: deeppink;}
+      p3 {text-indent: inherit;}
   </style>
     <link rel="stylesheet" href=nav.css>
     <link rel="stylesheet" href="style.css">
