--- a/reflection.html
+++ b/reflection.html
@@ -5,7 +5,7 @@
                <meta charset="utf-8">
                <title>Resources</title>
     <style>
-      h1 {text-align: left;}
+      h1 {text-align: center;}
       h2 {text-align: left;}
       p1::first-letter {color: deeppink;}
       p3 {text-indent: inherit;}
@@ -54,9 +54,6 @@
 <li>“Introducing Cellular Respiration.” Discovery Education, Mazzarella Educational Media, 2014, app.discoveryeducation.com/learn/videos/c86c8908-ad61-412b-821b-e5b60ad780c4.</li>
     </ul>
       </div>
-    
-
-
     
 <footer>
     <p>Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></p>
