--- a/reflection.html
+++ b/reflection.html
@@ -41,7 +41,7 @@
     <p1>For this website, I used a variety of resources.<p1/>
     
     <h2><strong>Videos</strong></h2>
-    <p2>For the videos that will be used in the <strong>learn page</strong>I have/will use videos that I personal have created.</p2>
+    <p2>For the videos that will be using in the <strong>learn page</strong> I have and will use videos that I have personally created.</p2>
     
     <h2>images and content</h2>
     <p>For the images and content that I have not personally created, I would like to give credit to the following:
