--- a/reflection.html
+++ b/reflection.html
@@ -43,7 +43,7 @@
     <h2><strong>Videos</strong></h2>
     <p2>For the videos that will be using in the <strong>learn page</strong> I have and will use videos that I have personally created.</p2>
     
-    <h2>images and content</h2>
+    <h2>Images and Content</h2>
     <p>For the images and content that I have not personally created, I would like to give credit to the following:
         <div class="paragraph">
             <ul style="list-style-type:disc">
