--- a/reflection.html
+++ b/reflection.html
@@ -41,7 +41,7 @@
     <p1 id="changeMe">For this website, I used a variety of resources.<p1/>
     
     <h2><strong>Videos</strong></h2>
-    <p2 id="changeMe">For the videos that will be using in the <strong>learn page</strong> I have and will use videos that I have personally created.</p2>
+    <p2 class="changeClass">For the videos that will be using in the <strong>learn page</strong> I have and will use videos that I have personally created.</p2>
     
     <h2>Images and Content</h2>
     <p>For the images and content that I have not personally created, I would like to give credit to the following:
