--- a/reflection.html
+++ b/reflection.html
@@ -15,7 +15,7 @@
   
 </head>
     
-<header> 
+<nav> 
     <div class="nav">
       <ul> 
          <li><a href="index.html">Home</a></li>
@@ -31,7 +31,7 @@
         <li><a href="reflection.html">Reference Page</a></li>
      </ul> 
     </div>
-</header>  
+</nav>  
 <body>
 <br/>
 <br/><h1><strong>Resources</strong></h1>
