--- a/reflection.html
+++ b/reflection.html
@@ -4,7 +4,12 @@
 <head>
                <meta charset="utf-8">
                <title>Resources</title>
-    
+  <style>
+      h1 {text-align: center;}
+      h2 {text-align: left;}
+      p1::first-letter {color: deeppink;}
+      p3 {text-indent: inherit;}
+  </style>
     <link rel="stylesheet" href=nav.css>
     <link rel="stylesheet" href="style.css">
   
@@ -30,7 +35,7 @@
 <body>
 <br/>
 <br/><h1><strong>Resources</strong></h1>
-    <p>For this website, I used a variety of resources.<p/>
+    <p>For this website, I used a variety of resources.
         <h2><strong>Videos</strong></h2>
     <p>For the videos that will be using in the <strong>learn page</strong> I have and will use videos that I have personally created.</p>
     
