--- a/practice week 5.html
+++ b/practice week 5.html
@@ -52,16 +52,18 @@
      </ul> 
     </div></header>
 		<nav class="items">
+			<br/>
 	<img src="aboutmejpg.png">
 			<img src="heADSHOT.jpg">
 	</nav>
 		<div class="items contents">
 			 
-    <p>Hello everyone! <br/> My name is Mr. Higgins, and I’m a science teacher at West Middle. I am a husband and a father. I have two amazing children; Leonardo and Josephine.  Leo is going to be three years old and Josie turned one last month. My wife’s name is Maria, and we have been together for ten amazing years!  As a family, we enjoy being active. Our favorite outdoor activities include going to the park and playing games. When I am not spending time with my family or working, I am investing in my education. I wish to continue building my skills and understanding of technology.  In addition, I wish to learn how to appropriately implement and manage technology in the classroom. By focusing on all of this, I wish to maximize student engagement, resources and skills throughout the learning process. As you can tell, I have a passion for education and making efforts to enhance this process.</p>
+    <p>Hello everyone! <br/><br/> My name is Mr. Higgins, and I’m a science teacher at West Middle. I am a husband and a father. I have two amazing children; Leonardo and Josephine.  Leo is going to be three years old and Josie turned one last month. My wife’s name is Maria, and we have been together for ten amazing years!  As a family, we enjoy being active. Our favorite outdoor activities include going to the park and playing games. When I am not spending time with my family or working, I am investing in my education. I wish to continue building my skills and understanding of technology.  In addition, I wish to learn how to appropriately implement and manage technology in the classroom. By focusing on all of this, I wish to maximize student engagement, resources and skills throughout the learning process. As you can tell, I have a passion for education and making efforts to enhance this process.</p>
+<style>
+	p{color:black;}
+<br/><p><center> <a href="/Higgins Resume.pdf"> My Resume </a><center/></p>
 
-<br/><p> <a href="/Higgins Resume.pdf"> My Resume </a></p>
-
-
+<style/>
 
 			</div>
 		<aside class="items"><blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote></aside>
