Update practice week 5.html

--- a/practice week 5.html
+++ b/practice week 5.html
@@ -27,6 +27,7 @@
 			background: blue;
 			display: flex;
 			justify-content: center;
+			vertical-align: middle;
 			align-items: center;
 			margin-bottom: 1px;
 			margin-right: 1px;
