--- a/practice week 5.html
+++ b/practice week 5.html
@@ -24,7 +24,7 @@
 		}
 
 		.wrapper * {
-			background: blue;
+			background: gray;
 			display: flex;
 			justify-content: center;
 			vertical-align: middle;
