--- a/practice week 5.html
+++ b/practice week 5.html
@@ -31,6 +31,13 @@
 			margin-bottom: 1px;
 			margin-right: 1px;
 		}
+		
+		img {
+        		max-width: 100%;
+        		max-height: 100%;
+        		display: block;
+        		margin: 0 auto;
+    		}
 	</style>
 </head>
 <body>
