--- a/practice week 5.html
+++ b/practice week 5.html
@@ -22,7 +22,14 @@
 			grid-column-end: 4;
 			color: black;
 		}
-				
+		
+		img{
+        		max-width: 100%;
+        		max-height: 100%;
+        		display: inline-block;
+        		margin: 0 auto;
+    		}
+		
 		.wrapper * {
 			background: gray;
 			display: flex;
