--- a/newbie.html
+++ b/newbie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="nav">
-        <label for="toggle">&9776;</label>
+        <label for="toggle">&#9776;</label>
         <input type="checkbox" id="toggle"/>
         <div class="menue">
             <a href="about.html">About</a>
