--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-               <meta charset="utf-8">
-               <title>Educator Credentials or About Me</title>
- <link rel="stylesheet" href=nav.css>
+                              <title>Educator Credentials or About Me</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <link rel="stylesheet" href=nav.css>
   <style>
     h1{ text-align: left;}
   </style>
