--- a/newbie.html
+++ b/newbie.html
@@ -4,7 +4,7 @@
     <title>Home Page</title>
     <link rel="tylesheet" type="text/css" href="main2.css"
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="nav">
