--- a/newbie.html
+++ b/newbie.html
@@ -10,7 +10,7 @@
     <div class="nav">
         <label for="toggle">&#9776;</label>
         <input type="checkbox" id="toggle"/>
-        <div class="menue">
+        <div class="menu">
             <a href="about.html">About</a>
             <a href="learn.html">Learn</a>
             <a href="reflection.html">Reflection</a>
