--- a/NewAbout.html
+++ b/NewAbout.html
@@ -11,23 +11,23 @@
         <div class="wrapper">
             <nav>
                 <div class="logo">
-                    <a href="#">Ken<span>neth</span> </a>
+                    <a href="#">Ken<span>neth</span></a>
                 </div>
                 <div class="right-nav">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="#">About</a>
-                    <a href="#">Learn</a>
-                    <a href="#">Resources</a>
-                    <a href="#">Contact</a>
+                    <a href="learn.html">Learn</a>
+                    <a href="contact.html">Resources</a>
+                    <a href="reflection.html">Contact</a>
                 </div>
             </nav>
             <div class="hero-section">
                 <div class="hero-left">
-                    <img src="#" alt=""> 
+                    <img src="heADSHOT.jpg" alt=""> 
                 </div>
                 <div class="hero-right">
                     <h2>Kenneth Higgins</h2>
-                    <h1 class="cusAni" data-text="web&nbsp;Developer">Web&nbsp;Developer</h1>
+                    <h1 class="cusAni" data-text="web&nbsp;Developer">Web&nbsp;Life Science</h1>
                     <p>My main content will go in here... I  just have to copy and paste it</p>
                 </div>
             </div>
