--- a/NewAbout.html
+++ b/NewAbout.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <title>About Me</title>
-    <link rel="stylesheet" href="Style.css"
+    <link rel="stylesheet" href="style.css"
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,800&display=swap" rel="stylesheet">
 </head>
 <body>
