--- a/NewAbout.html
+++ b/NewAbout.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="hero-right">
                     <h2>Kenneth Higgins</h2>
-                    <h1 class="cusAni" data-text="web&nbsp;Developer">Web&nbsp;Life Science</h1>
+                    <h1 class="cusAni" data-text="web&nbsp;Science">Life&nbsp; Science</h1>
                     <p>My main content will go in here... I  just have to copy and paste it</p>
                 </div>
             </div>
