--- a/NewAbout.html
+++ b/NewAbout.html
@@ -11,7 +11,8 @@
         <div class="wrapper">
             <nav>
                 <div class="logo">
-                    <a href="#">Ken<span>neth</span></a>
+                    <a href="www.linkedin.com/in/ken-higgins-iii-022336148
+">Ken<span>neth</span></a>
                 </div>
                 <div class="right-nav">
                     <a href="index.html">Home</a>
@@ -28,7 +29,11 @@
                 <div class="hero-right">
                     <h2>Kenneth Higgins</h2>
                     <h1 class="cusAni" data-text="web&nbsp;Science">Life&nbsp; Science</h1>
-                    <p>My main content will go in here... I  just have to copy and paste it</p>
+            <p>My journey started back in high school.  I hated science until I had an incredible experience my freshman year.  My teacher was Dr. Pinkham.  He taught through experiences and reflection.  At the end of the class, the teacher asked “How can you apply this to your life?”.</p>  
+            <p>I had a new passion, science.  In college, I continued to foster this passion.  I studied Biology, Biochemistry, and education as an undergrad.  I went on to work in a lab only to feel unfulfilled.</p> 
+            <p>I changed careers and began working as a science teacher.  In addition, I was a head coach of three sports.  Eventually, I earned my master’s in education leadership and moved into administration.  I continued my education studying educational technologies and informational systems.</p>  
+            <p>I love all the nuances in education.  I am passionate about education and I want to enhance it.  I want to leave a positive mark on education as Dr. Pinkham did for me.</p>
+</p>
                 </div>
             </div>
         </div>
