--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-             <meta charset="utf-8">  
-  <title>Contact</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <link rel="stylesheet" href=nav.css>
+               <meta charset="utf-8">
+               <title>Contact</title>
+    <link rel="stylesheet" href=nav.css>
   
 </head>
     
 <header> 
-    <div class="nav">
+    <div class="nav"></div>
       <ul> 
          <li><a href="index.html">Home</a></li>
-         <li><a href="about.html">About</a></li>                               
+         <li><a href="NewAbout.html">About</a></li>                               
          <li><a href="learn.html">Learn</a>
             <ul>
                 <li><a href="#link1">Link 1</a></li>
