--- a/learn.html
+++ b/learn.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"
                <title>Welcome page</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <link rel="stylesheet" href=nav.css>
+     <link rel="stylesheet" href=nav.css>
   
 </head>
     
@@ -12,7 +12,7 @@
     <div class="nav">
       <ul> 
          <li><a href="index.html">Home</a></li>
-         <li><a href="about.html">About</a></li>                               
+         <li><a href="NewAbout.html">About</a></li>                               
          <li><a href="learn.html">Learn</a>
             <ul>
                 <li><a href="#link1">Link 1</a></li>
