--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <h1 class="heading">Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</h1>
 
-<p>This website is an extension to our class and is a resource to help support your learning by:
+    <p>This website is an extension to our class and is a resource to help support your learning by:</p>
 <ul style="list-style-type:disc">
 <li>Using objective-specific information</li>
 <li>Applying concepts to real- life situations</li>
@@ -38,7 +38,7 @@
 <li>Reflecting on our impact in each concept</li></ul>
     
 
-<h5>My journey started back in high school.  I hated science until I had an incredible experience my freshman year.  My teacher was Dr. Pinkham.  He taught through experiences and reflection.  At the end of the class, the teacher asked “How can you apply this to your life?”.  I had a new passion, science.  In college, I continued to foster this passion.  I studied Biology, Biochemistry, and education as an undergrad.  I went on to work in a lab only to feel unfulfilled.  I changed careers and began working as a science teacher.  In addition, I was a head coach of three sports.  Eventually, I earned my master’s in education leadership and moved into administration.  I continued my education studying educational technologies and informational systems.  I love all the nuances in education.  I am passionate about education and I want to enhance it.  I want to leave a positive mark on education as Dr. Pinkham did for me.</h5>
+<p>My journey started back in high school.  I hated science until I had an incredible experience my freshman year.  My teacher was Dr. Pinkham.  He taught through experiences and reflection.  At the end of the class, the teacher asked “How can you apply this to your life?”.  I had a new passion, science.  In college, I continued to foster this passion.  I studied Biology, Biochemistry, and education as an undergrad.  I went on to work in a lab only to feel unfulfilled.  I changed careers and began working as a science teacher.  In addition, I was a head coach of three sports.  Eventually, I earned my master’s in education leadership and moved into administration.  I continued my education studying educational technologies and informational systems.  I love all the nuances in education.  I am passionate about education and I want to enhance it.  I want to leave a positive mark on education as Dr. Pinkham did for me.</p>
     
 <blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
 </div>
