--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="intro">  
 <body>
 
-<h1 class="heading">Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</h1>
+<h1>Welcome to Mr. Higgins <em>7th Grade Life Science</em> Class!</h1>
 
     <p>This website is an extension to our class and is a resource to help support your learning by:</p>
 <ul style="list-style-type:disc">
