--- a/NewAbout.html
+++ b/NewAbout.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <title>About Me</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 </div>
                 <div class="right-nav">
                     <a href="index.html">Home</a>
-                    <a href="#">About</a>
+                    <a href="NewAbout.html">About</a>
                     <a href="learn.html">Learn</a>
                     <a href="contact.html">Resources</a>
                     <a href="reflection.html">Contact</a>
@@ -39,4 +39,4 @@
         </div>
     </header>
 </body>
-<html>
+</html>
