--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
                <meta charset="utf-8">
                <title>Welcome page</title>
     <link rel="stylesheet" href=nav.css>
-    <link rel="stylesheet" href="OLDstyle.css"
+    <link rel="stylesheet" href="OLDstyle.css">
   
 </head>
     
