--- a/NewAbout.html
+++ b/NewAbout.html
@@ -38,9 +38,7 @@
         </div>
     </header>
     <footer>
-        <h1 class="cusAni" data-text="Character&nbsp;Rosevelt">Character. in the long run, &nbsp;is the decisive factor in the life of an individual and of all nations alike. -Thomas Roosevelt</h1>
+        <h1 class="cusAni" data-text="Character, in the long run, is the decisive factor in life&nbsp;of an individual and of all nations alike. -Thomas Roosevelt">Character, in the long run, &nbsp;is the decisive factor in the life of an individual and of all nations alike. -Thomas Roosevelt</h1>
     </footer>
 </body>
 </html>
-
-“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –Theodore Roosevelt 
