--- a/NewAbout.html
+++ b/NewAbout.html
@@ -23,7 +23,7 @@
             </nav>
             <div class="hero-section">
                 <div class="hero-left">
-                    <img src="heADSHOT.jpg" alt=""> 
+                    <img src="profile.png" alt=""> 
                 </div>
                 <div class="hero-right">
                     <h2>Kenneth Higgins</h2>
