--- a/NewAbout.html
+++ b/NewAbout.html
@@ -38,7 +38,7 @@
         </div>
     </header>
     <footer>
-        <h1 class="cusAni" data-text="-Thomas&nbsp; Roosevelt">Character, in the long run, &nbsp;is the decisive factor in the life of an individual and of all nations alike. -Thomas Roosevelt</h1>
+        <h1>Character, in the long run, is the decisive factor in the life of an individual and of all nations alike. -Thomas Roosevelt</h1>
     </footer>
 </body>
 </html>
