--- a/reflection.html
+++ b/reflection.html
@@ -6,10 +6,10 @@
                <title>Resources</title>
     
     <link rel="stylesheet" href=nav.css>
-    <link rel="stylesheet" href="style.css">
+    
   
 </head>
-  
+<body>
   <header>
    <div class="nav">
       <ul> 
