--- a/NewAbout.html
+++ b/NewAbout.html
@@ -37,10 +37,8 @@
             </div>
         </div>
     </header>
-<div class="main-footer">
-    <footer>Character, in the long run, is the decisive factor in the life of an individual and of all nations alike. <br/>-Thomas Roosevelt</br/></footer>
-    
-</div>
-    
 </body>
+<footer>
+    <p><i class="email.png">Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></i></p>
+</footer>
 </html>
