--- a/NewAbout.html
+++ b/NewAbout.html
@@ -39,6 +39,6 @@
     </header>
 </body>
 <footer>
-    <p><i class="email.png">Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></i></p>
+    <i class="email.png"></i><p>Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></p>
 </footer>
 </html>
