--- a/NewAbout.html
+++ b/NewAbout.html
@@ -3,8 +3,10 @@
 <head> 
     <meta charset="UTF-8">
     <title>About Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a1a1363e9a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -39,6 +41,6 @@
     </header>
 </body>
 <footer>
-    <i class="email.png"></i><p>Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></p>
+    <i class="fas fa-phone-square-alt"></i><p>Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></p>
 </footer>
 </html>
