--- a/NewAbout.html
+++ b/NewAbout.html
@@ -42,5 +42,6 @@
 </body>
 <footer>
     <i class="fas fa-phone-square-alt">314.555.5555</i>
+    <br/><i class="fas fa-envelope">Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></i> 
 </footer>
 </html>
