--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                <meta name="viewport" content="width=device-width, initial-scale=1">
                 <link rel="stylesheet" href="style.css">
                 <link rel="stylesheet" href="nav.css">
-                <link rel="icon" type="image/x-icon" href="/islt_7310/images/favicon.png" /> <title>Welcome page</title>
+                <link rel="icon" type="image/x-icon" href="favicon.png" /> <title>Welcome page</title>
 </head>
 <body>
     <nav>
@@ -44,7 +44,7 @@
 </main>
 
 <footer>
-    Created by Kenneth R. Higgins III. Contact: <img class="icon" src="/islt_7310/images/email.png" alt="Email" width="30px" height="30px"> krh7c5@mail.missouri.edu <img class="icon" src="/islt_7310/images/cell.jpg" alt="cell" width="30px" height="30px"> 888.888.8888 
+    Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email" width="30px" height="30px"> krh7c5@mail.missouri.edu <img class="icon" src="/islt_7310/images/cell.jpg" alt="cell" width="30px" height="30px"> 888.888.8888 
 </footer>
     
 </body>
