--- a/about.html
+++ b/about.html
@@ -56,10 +56,9 @@
             </li>
         </ul>
         
-        <video class="video" width="500" controls> 
-            <source src="videores.mp4" type="video/mp4">
-        
-        </video>   
+        <iframe width="420" height="315"
+src="https://youtu.be/HBJSK3K5Dsk">
+</iframe> 
 </main>
 
 <footer>
