--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 <blockquote class="blockquote"> “Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
 
   <h3 class="eo">Education Overview</h3>
-        
+        <img src="heADSHOT.jpg" alt="Trulli" width="500" height="333">
         <ul class="credentials">
             <li>Francis Howell North High School, Saint Charles, MO –– 2003</li>
             <li>University of Missouri, Saint Louis, MO — Bachelor of Science in Biology, Biochemistry, and Education, 2012</li>
