--- a/about.html
+++ b/about.html
@@ -57,10 +57,8 @@
                 </ul>
             </li>
         </ul>
-        <video class="video" width="500" controls>
-        <iframe width="500" height="315"
-src="https://youtu.be/HBJSK3K5Dsk">
-</iframe> 
+        <video class="video" width="560" controls>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/HBJSK3K5Dsk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
   </video>
 </main>
 
