--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                     <ul>
                 <li><a href="#link1">Link 1</a></li>
                 <li><a href="#link2">Link 2</a></li>
-                <li><a href="link3">Link 2</a></li>
+                <li><a href="#link3">Link 2</a></li>
                     </ul>
             </li>
                 <li><a href="contact.html">Contact</a></li>
