--- a/about.html
+++ b/about.html
@@ -57,9 +57,11 @@
                 </ul>
             </li>
         </ul>
-        <video class="video" width="560" controls>
+  
+    <div class="iframe-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/HBJSK3K5Dsk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-  </video>
+  </div>
+  
 </main>
 
 <footer>
