--- a/reflection.html
+++ b/reflection.html
@@ -35,6 +35,7 @@
 
 <div class="resources>
 <br><h1><strong>Resources</strong></h1>
+            </div>
     
     <p id="changeMe">For this website, I used a variety of resources.<p/>
     
