--- a/about.html
+++ b/about.html
@@ -59,9 +59,9 @@
             </li>
         </ul>
   
-    <div class="iframe-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/HBJSK3K5Dsk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-  </div>
+<video class="video" controls> 
+       <source src="https://www.youtube.com/watch?v=HBJSK3K5Dsk" type="video/mp4">
+</video>
   
 </main>
 
