--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         </ul>
   
 <video class="video" controls> 
-       <source src="https://www.youtube.com/watch?v=HBJSK3K5Dsk" type="video/mp4">
+       <source src="https://www.youtube.com/watch?v=HBJSK3K5Dsk">
 </video>
   
 </main>
