--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         </ul>
   
 <video class="video" controls> 
-       <source src="https://www.youtube.com/watch?v=HBJSK3K5Dsk">
+       <source src="C:\Users\Ken Higgins III\Desktop\islt_7310\Images\videores.mp4">
 </video>
   
 </main>
