--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         </ul>
   
 <video class="video" controls> 
-       <source src="C:\Users\Ken Higgins III\Desktop\islt_7310\Images\videores.mp4">
+       <source src="videores.mp4" type="video/mp4">
 </video>
   
 </main>
