--- a/reflection.html
+++ b/reflection.html
@@ -35,9 +35,9 @@
  <main>
     
     <h2><strong>Videos</strong></h2>
-    <p2>For the videos that will be used in the <strong>learn page</strong>I have/will use videos that I personal have created.</p2>
+    <p2>For the videos that will be used in the <strong>learn page</strong>, I have used videos that I personal have created.</p2>
     
-    <h2>images and content</h2>
+    <h2>Images and Content</h2>
     <p>For the images and content that I have not personally created, I would like to give credit to the following:</p>
         <div class="paragraph">
             <ul style="list-style-type:disc">
