--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
       </header>
 <main>
       <p> I will add in some cool images and links</p>
+      </main>
 <footer>
     Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell"> 888.888.8888 
 </footer>
