--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,8 @@
             </ul> 
         </div>
     </nav>
-<header>
-  <h1 class="heading"> Contact Information:</h1> 
-      </header>
+ <header><h1 class="heading">Contact Information</h1></header>
+
 <main>
       <p> I will add in some cool images and links</p>
       </main>
