--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 </main>
 
 <footer>
-    Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email" width="30px" height="30px"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell" width="30px" height="30px"> 888.888.8888 
+    Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell"> 888.888.8888 
 </footer>
     
 </body>
