--- a/reflection.html
+++ b/reflection.html
@@ -19,9 +19,9 @@
                 <li><a href="about.html">About</a></li>                               
                 <li><a href="learn.html">Learn</a>
                     <ul>
-                <li><a href="#link1">Link 1</a></li>
-                <li><a href="#link2">Link 2</a></li>
-                <li><a href="link3">Link 2</a></li>
+                      <li><a href="#observation">Observations</a></li>
+                      <li><a href="#graphing">Graphing</a></li>
+                      <li><a href="#cej">C.E.J.</a></li>
                     </ul>
             </li>
                 <li><a href="contact.html">Contact</a></li>
