--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,19 @@
 
 <main>
       <p> I will add in some cool images and links</p>
+<table>
+     <tr> 
+           <th>Last Name</th>
+           <th>First Name</th> 
+           <th>Prefered Contact</th> 
+     </tr> 
+<tr> 
+     <td>Higgins</td>
+     <td>Ken</td>
+     <td>888-8888</td>
+</tr> 
+</table>
+      
       </main>
       <nav></nav>
 <footer>
