--- a/contact.html
+++ b/contact.html
@@ -32,20 +32,25 @@
  <header><h1 class="heading">Contact Information</h1></header>
 
 
-      <p> I will add in some cool images and links</p>
+      <p> Contact me using the tool below:</p>
 <table>
      <tr> 
            <th>Last Name</th>
            <th>First Name</th> 
-           <th>Prefered Contact</th> 
+           <th>Email</th> 
+           <th>Message</th>
+           <th>Send</th>
      </tr> 
 <tr> 
      <td>Higgins</td>
      <td>Ken</td>
      <td>888-8888</td>
 </tr> 
+      <tr>
+          <td>  
+      </tr>
 </table>
-      
+      </body>      
   
       <nav></nav>
 <footer>
