--- a/contact.html
+++ b/contact.html
@@ -28,28 +28,29 @@
                 <li><a href="reflection.html">Reference Page</a></li>
             </ul> 
         </div>
-    </nav>
- <header><h1 class="heading">Contact Information</h1></header>
+<form action="mailto:krh7c5@mail.missouri.edu?Subject=Porfolio_Website_Contact" method="post" enctype="text/plain">
+                <label for="firstname">First Name</label>
+                <input type="text" name="firstname"  id="firstname" autofocus tabindex="1" placeholder="Jean" required>
+            <br> 
+                <label for="lastname">Last Name</label>
+                <input type="text" name="lastname" id="lastname" tabindex="2" placeholder="Doe" required>
+            <br>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" tabindex="3" placeholder="johndoe@gmail.com" required>
+            <br>
+                <label>Message</label>
+                <textarea id="message" name="message" tabindex="4" placeholder="Enter message here..."></textarea>
+            <br>
+            <button>Submit</button>
+        </form>
+        <header class="ctitle">
+            <h1 id="contact">Contact</h1>
+        </header>
 
-
-      <p> Contact me using the tool below:</p>
-<table>
-     <tr> 
-           <th>Last Name</th>
-           <th>First Name</th> 
-           <th>Email</th> 
-           <th>Message</th>
-           <th>Send</th>
-     </tr> 
-<tr> 
-     <td>Higgins</td>
-     <td>Ken</td>
-     <td>888-8888</td>
-</tr> 
-      <tr>
-          <td>  
-      </tr>
-</table>
+       <div id="logo5"><a href="index.html" target="blank">ERIN WEAVER</a></div>
+    
+        <main class="ctext">
+        </main>
       </body>      
   
       <nav></nav>
