--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         </div>
           
         <header>
-              <h1 class="heading">Contact me: Class!</h1>
+              <h1 class="heading">Contact me:</h1>
         </header>
           
 <form action="mailto:krh7c5@mail.missouri.edu?Subject=Porfolio_Website_Contact" method="post" enctype="text/plain">
