--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
   
       <nav></nav>
 <footer>
-    Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell"> 888.888.8888 
+    Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email"> krh7c5@mail.missouri.edu <img class="icon" Phone: src="cell.jpg" alt="cell"> 888.888.8888 
 </footer>
     
 </body>
