--- a/index.html
+++ b/index.html
@@ -40,7 +40,46 @@
         <li>Reflecting on our impact in each concept</li></ul>
 
  <p>My journey started back in high school.  I hated science until I had an incredible experience my freshman year.  My teacher was Dr. Pinkham.  He taught through experiences and reflection.  At the end of the class, the teacher asked “How can you apply this to your life?”.  I had a new passion, science.  In college, I continued to foster this passion.  I studied Biology, Biochemistry, and education as an undergrad.  I went on to work in a lab only to feel unfulfilled.  I changed careers and began working as a science teacher.  In addition, I was a head coach of three sports.  Eventually, I earned my master’s in education leadership and moved into administration.  I continued my education studying educational technologies and informational systems.  I love all the nuances in education.  I am passionate about education and I want to enhance it.  I want to leave a positive mark on education as Dr. Pinkham did for me.</p>   
-    
+  
+  <p>Over the year, we will cover the following units and content: </p>
+  
+  <table id="ptable">
+                <caption id="pcaption">Unit of Instruction / Concepts taught</caption>
+                <thead>
+                    <tr>
+                        <th id="B" scope="col">Unit #</th>
+                        <th id="C" scope="col">Content:</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>"Unit One: Characteristics of Living Organisms"</td>
+                        <td>Reproduction, Energy, Shelter, Waste, Respond to Stimuli, Growth & Development</td>
+                    </tr>
+                    <tr>
+                        <td>"Unit Two: Levels of Organization"</td>
+                        <td>Cells, Tissues, Organs, Oragn Systems</td>
+                    </tr>
+                    <tr>
+                        <td>Unit 3: Genetics and Heredity</td>
+                        <td>Traits, Inheritance, Punnett Squares, Mutations, Artificial/Selective Breeding</td>
+                    </tr>
+                  <tr>
+                     <td>Unit 4: Cycles of Energy and Matter</td>
+                     <td>Photosynthesis, Respiration, Carbon/Nitrogen/Water Cycles</td>
+                    </tr>
+                   <tr>
+                        <td>Unit 5: Genetics and Heredity</td>
+                        <td>Traits, Inheritance, Punnett Squares, Mutations, Artificial/Selective Breeding</td>
+                    </tr>
+                   <tr>
+                        <td>Unit 6: Ecosystems</td>
+                        <td>Symbiosis, Natural Resources, Disturbances, Biodiversity, Invasive Species, Human Impact</td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
+  
 <blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
     
 </main>
