--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   <p>Over the year, we will cover the following: </p>
   
-  <table id="ptable">
+  <table class="ptable">
                 <caption id="pcaption">Unit of Instruction / Concepts taught</caption>
                 <thead>
                     <tr>
