--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     </tr>
                 </tbody>
             </table>
-       
-  
+        </main>
+  <main>
 <blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
    
 
